<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.mgeske.tsgamebuilder.SearchCardActivity" >
	    
	    <TextView android:id="@+id/search_card_type_prompt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBaseline="@+id/search_card_type"
	        android:layout_alignTop="@id/search_card_type"
	        android:layout_alignBottom="@id/search_card_type"
	        android:text="@string/search_card_type_prompt"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        />
	    <Spinner android:id="@id/search_card_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/search_card_type_prompt"
	        android:layout_alignParentTop="true"
	        android:entries="@array/card_types"
	        android:prompt="@string/search_card_type_prompt"
	        />
	    
	    
		<View android:id="@+id/card_type_divider" style="@style/Divider" android:layout_below="@id/search_card_type_prompt"/>
		
	    <EditText android:id="@+id/card_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/card_type_divider"
	        android:layout_alignParentLeft="true"
	        android:inputType="text"
	        android:hint="@string/search_card_text_hint"
	        />
	    
	    <!-- Begin cardType-specific search fields (hidden by default) -->
	    <!-- Monster card -->
	    <RelativeLayout android:id="@+id/search_monster_fields"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/card_text"
	        android:layout_alignParentLeft="true"
	        android:visibility="gone" >
	        
		    <Spinner android:id="@+id/search_monster_level"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_alignParentLeft="true"
		        android:entries="@array/monster_levels"
		        android:prompt="@string/search_monster_level_prompt"/>
		    
		    <CheckBox android:id="@+id/search_monster_ambusher"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_monster_level"
		        android:text="@string/search_monster_ambusher_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_monster_doomladen"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_monster_ambusher"
		        android:text="@string/search_monster_doomladen_text"
		        android:checked="false"/>
		    
		    
		    <CheckBox android:id="@+id/search_monster_disease"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_monster_doomladen"
		        android:text="@string/search_card_disease_text"
		        android:checked="false"/>
		    
		</RelativeLayout>
	        
	    
	    <RelativeLayout android:id="@+id/search_hero_fields"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/search_monster_fields"
	        android:layout_alignParentLeft="true"
	        android:visibility="gone" >
		    
		    <Spinner android:id="@+id/search_hero_race"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
		        android:layout_alignParentLeft="true"
		        android:entries="@array/hero_races"
		        android:prompt="@string/search_hero_race_prompt"/>
		    
		    <Spinner android:id="@+id/search_hero_class"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/search_hero_race"
		        android:entries="@array/hero_classes"
		        android:prompt="@string/search_hero_class_prompt"/>
		    
		    <EditText android:id="@+id/search_hero_strength"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_below="@id/search_hero_race"
		        android:hint="@string/search_hero_strength_hint"
		        android:inputType="number"/>
		    
		    <CheckBox android:id="@+id/search_hero_light"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_hero_strength"
		        android:text="@string/search_card_light_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_hero_magic_attack"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_hero_light"
		        android:text="@string/search_card_magic_attack_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_hero_physical_attack"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_hero_magic_attack"
		        android:text="@string/search_card_physical_attack_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_hero_removes_disease"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_hero_physical_attack"
		        android:text="@string/search_card_removes_disease_text"
		        android:checked="false"/>
		    
		    <!-- TODO: add checkbox for lvl 4 heroes? gives disease? (not in db) -->
	    </RelativeLayout>
	    
	    <RelativeLayout android:id="@+id/search_village_fields"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/search_hero_fields"
	        android:layout_alignParentLeft="true"
	        android:visibility="gone">
		    
	        <Spinner android:id="@+id/search_village_class_spinner"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true" />
		    
		    <EditText android:id="@+id/search_village_cost"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_below="@id/search_village_class_spinner"
		        android:hint="@string/search_village_cost_hint"
		        android:inputType="number"/>
		    
		    <EditText android:id="@+id/search_village_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@id/search_village_cost"
	            android:layout_toRightOf="@id/search_village_cost"
		        android:hint="@string/search_village_value_hint"
		        android:inputType="number"/>
		    
		    <EditText android:id="@+id/search_village_weight"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@id/search_village_value"
		        android:layout_toRightOf="@id/search_village_value"
		        android:hint="@string/search_village_weight_hint"
		        android:inputType="number"/>
		    
		    <CheckBox android:id="@+id/search_village_light"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_cost"
		        android:text="@string/search_card_light_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_strength"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_light"
		        android:text="@string/search_village_strength_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_magic_attack"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_strength"
		        android:text="@string/search_card_magic_attack_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_physical_attack"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_magic_attack"
		        android:text="@string/search_card_physical_attack_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_disease"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_physical_attack"
		        android:text="@string/search_card_disease_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_removes_disease"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_disease"
		        android:text="@string/search_card_removes_disease_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_additional_buys"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_removes_disease"
		        android:text="@string/search_village_additional_buys_text"
		        android:checked="false"/>
		    
		    <CheckBox android:id="@+id/search_village_destroys_cards"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/search_village_additional_buys"
		        android:text="@string/search_village_destroys_cards_text"
		        android:checked="false"/>
	    </RelativeLayout>
	    <!-- End cardType-specific search fields -->
	    
		<View android:id="@+id/specific_fields_divider" style="@style/Divider" android:layout_below="@id/search_village_fields"/>
	    
	    <CheckBox android:id="@+id/include_all_sets"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/specific_fields_divider"
	        android:layout_alignParentLeft="true"
	        android:text="@string/search_card_include_all_text"
	        android:checked="false"/>
	    
	    <Button android:id="@+id/search_card"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/include_all_sets"
	        android:layout_alignParentLeft="true"
	        android:text="@string/search_card_search_button_text"
	        />
	
	</RelativeLayout>
</ScrollView>